mapentity/static/mapentity/style.css
/* ... */
.leaflet-control-layers input[type="checkbox"] {
    margin: -2px 0 0;
}

.leaflet-control-filelayer .leaflet-bar-part {
    text-align: center;
    margin-bottom: 0px;
}

.leaflet-control-filelayer.leaflet-control-zoom-in {
    background-image: none;
}

.leaflet-control-filelayer i {
    margin-top: 4px;
}


/*
 * Show enumeration values and map icons, only in print mode.
 * (in document export, values will appear too since HTML is put in doc)
 * See https://github.com/makinacorpus/django-mapentity/issues/35
 */
.enumeration-icon, .enumeration-value {
    display: none;
}

body.screamshot .enumeration-icon,
body.screamshot .enumeration-value {
    display: inline-block;
}

.enumeration-icon {
    background-color: #000042 !important;
    text-align: center;
    vertical-align: middle;
    width: 16px !important;
    height: 16px !important;
    margin-left: -8px !important;
    margin-right: -8px !important;
    line-height: 16px;
    font-size: 10px;
    font-weight: bold;
    color: white;
}


/**** Widgets ****/

.axislabel {
    color: blue;
    font-size: 10px;
}

tr.selected-row td {
    /* Button green color #5BB75B */
    background-color: #DF8 !important;
    opacity: 1 !important;
}

.filter-set {
    font-weight: bold;
    color: black !important;
    border: 2px solid black !important;
}

#maphead {
    position: absolute;
    padding-top: 3px;
    z-index: 999;
    width: 100%;
}

/* Layout (based on "Conflicting position" trick) */
#container {position: absolute; top: 39px; bottom: 0; left: 0; right: 0;}
#panelleft {position: absolute; top: 2px; bottom: 0; width: 50%; left: 0;}
#panelright {position: absolute; top: 2px; bottom: 0; width: 50%; right: 0;}

#mainmap {position: absolute; top: 0px; bottom: 0px; left: 0px; right: 0px;}


.map-panel.detail {position: absolute; top: 2px; bottom: 0px; right: 0px;}
#detailmap {height: 100%;}


/***** Entity List ******/

#list-panel {
    margin-left: 60px;
    padding: 4px;
    height: calc(100vh - 50px);
}
@media (max-height: 960px) {
    #list-panel {
        margin-left: 48px;
    }
}

#list-panel .table th,
#list-panel .table td {
    padding: 5px;
    white-space: nowrap;
    max-width: 200px;
    overflow: hidden;
    text-overflow: ellipsis;
}
#list-panel .pagination a, .pagination span {
    line-height: 30px;
}

#list-panel .table tbody tr.success > td {
    background-color: #75E376;
}

#list-panel .table tbody tr.success > td a {
    color: black;
    font-weight: bold;
    text-decoration: underline;
}




/* Left menu */
#entitylist {
    position: absolute;
    top: 0px;
    left: 0;
    width: 60px;
    max-height: calc(100vh - 50px);
    overflow-y: auto;
}

@media (max-height: 960px) {
    #entitylist {
        width: 44px;
    }
}

#entitylist ul {
    margin-bottom: 0;
}

#entitylist li img {
    opacity: 0.3;
}

#entitylist li.active img, #entitylist li a:hover img {
    opacity: 1.0;
}

#entitylist a {
    padding: 0px;
}

#entitylist .nav-pills.nav-stacked > li > a {
    margin-bottom: 0;
}

#entitylist .nav-pills > li > a {
    border-radius: 0px;
    -moz-border-radius: 0px;
    border-bottom: 1px solid #DDDDDD;
    border-right: 1px solid #DDDDDD;
    margin-bottom: 0px;
    margin-top: 0px;
    background-color: #F3F3F3;
}

#entitylist .nav-pills > .active > a,
#entitylist .nav-pills > .active > a:hover {
    border-right: 1px solid #fff;
    background-color: #fff;
    color: #333333;
}

#entitylist .nav-pills > li > a > img  {
    padding-bottom: 4px;
}

@media (max-height: 960px) {
    #entitylist .nav-pills > li > a > img  {
        width: 30px;
    }
}





/* Datatables customization for filters and pagination */
.dataTables_wrapper {
    height: calc( 100% - 60px);
}

#list-download-toolbar,
#objects-list_filter,
div.dataTables_paginate {
    position: absolute;
    bottom: 5px;
}
div.dataTables_paginate {
    bottom: 0px;
}

#list-download-toolbar {
    padding-bottom: 10px;
}

div.dataTables_paginate {
    right: 5px;
}

#objects-list_filter {
    left: 160px;
}

@media (max-width: 1280px) {
    #objects-list_filter {
        left: 130px;
    }

    .dataTables_wrapper {
        height: calc( 100% - 120px);
    }
    #list-download-toolbar{
        padding-top: 50px;
    }

    #list-download-toolbar,
    #objects-list_filter,
    #objects-list_filter label,
    div.dataTables_paginate {
        position: inherit;
        float: none;
        text-align: center;
    }
}




/* Filters popover */

#mainfilter {
    width: 480px;
}

#mainfilter .left {
    width: 240px;
    float: left;
}

#mainfilter .right {
    width: 240px;
    float: right;
}

#mainfilter .actions {
    clear: both;
    text-align: right;
}

#mainfilter label {
    display: none;
}

#mainfilter input, #mainfilter select {
    font-family: sans-serif;
    font-size: 13px;
    border: 1px solid #AAA;
}

#mainfilter select {
    color: #999;
}

#mainfilter select option {
    color: black;
}

#mainfilter select option:first-child {
    color: #999;
}


#filters-panel .well {
    padding: 5px;
}

#filters-panel form {
    margin-bottom: 0px;
}

#filters-close {
    position: absolute;
    right: 3px;
}

#filters-close a {
    width: 20px;
    height: 20px;
    padding: 4px;
}

.popover {
    border: 5px solid rgba(0, 0, 0, 0.5);
    font-size: 14px;
    max-width: none;
}

span.filter-info {
    font-weight: bold;
}


/***** Entity detail ******/


.details-panel {
    padding-left: 40px;
}

.details-panel .table {
    table-layout: fixed;
    margin-right: 10px;
}

.details-panel table.blades {
    table-layout: auto;
}

.details-panel .table th {
    width: 40%;
}

.details-panel table.blades th {
    width: auto;
}

.details-panel h3 {
    border-bottom: 1px solid #333333;
}

.details-panel td {
    color: #636363;
}

.details-panel th, .details-panel td {
    border-top: 0px;
    border-bottom: 1px solid #DDDDDD;
}

.details-panel tr.dashed-line td {
    border-bottom: 1px dashed #DDDDDD;
}
/* ... */

